--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -1,42 +1,24 @@
-* {
-  box-sizing: border-box;
+*{ box-sizing: border-box; padding: 0; margin: 0; }
+
+#actions{ width: 100%; padding: 20px 4px; text-align: center; }
+
+#actions #alert{ 
+  padding: 20px;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  gap: 20px; 
   font-family: "Inter", sans-serif;
 }
 
-html{ scroll-behavior: smooth; }
-
-h1, h2, h3, p { padding: 0; margin: 0; }
-
-#actions { width: 100%; padding: 8px; height: auto; }
-
-#actions #alert {
-  color: #0a3871;
-  font-weight: lighter;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 8px 0px;
-  gap: 10px;
-  font-family: 19.36px;
-}
-
-#actions .btn-container {
-  width: 100%;
-  padding: 10px 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-}
-
-body { margin: 0; }
+#actions .btn-container{ display: flex; justify-content: center; gap: 60px; }
 
 #copy-button {
   background-color: #0a3871;
   color: #d8dfe8;
   transition: scale 0.3s ease-in-out;
   width: 100%;
+  display: none;
 }
 
 #decryp-button {
@@ -46,17 +28,36 @@ body { margin: 0; }
   transition: scale 0.3s ease-in-out;
 }
 
-#decryp-button:hover,
-#copy-button:hover { scale: 0.988; }
+#decryp-button:hover, #copy-button:hover{ scale: 0.988; }
 
-.encrypter-container {
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
+.encrypter-container, #header, footer{ background-color: #d8dfe8; }
+
+.encrypter-container{
+  height: 100%;
+  padding: 10px 40px;
   display: flex;
   justify-content: space-between;
+}
+
+.encrypter-container .left-side{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  background-color: #d8dfe8;
+  justify-content: space-around;
+
+}
+
+.encrypter-container .right-side{
+  padding: 0px 7px;
+  width: 30%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  gap: 40px;
+  border-radius: 20px;
 }
 
 #encryp-button,
@@ -66,6 +67,7 @@ body { margin: 0; }
   border-radius: 20px;
   font-weight: bold;
   font-size: 22px;
+  font-family: "Inter", sans-serif;
   cursor: pointer;
 }
 
@@ -77,90 +79,78 @@ body { margin: 0; }
   transition: all 0.3s ease-in-out;
 }
 
-#encryp-button:hover {
-  scale: 0.988;
-  filter: brightness(150%); 
-}
+#encryp-button:hover { scale: 0.988; filter: brightness(150%); }
 
-footer {
-  padding: 3px 0px;
-  background-color: #d8dfe8;
-  text-align: center;
-  font-weight: bolder !important;
-}
+footer{ width: 100%; text-align: center; padding: 4px 0px; }
 
-#header {
+#header{ 
+  padding: 8px 40px;
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 30px;
-  background-color: #d8dfe8;
 }
 
-#header h1,
-footer h2 {
+#header img { animation: bright 1.5s ease-in infinite; }
+
+#header h1, footer h2 { 
   font-family: "Gruppo", cursive;
-  color: #0a3871;
-  animation: bright 1.5s linear infinite;
+  color: #0a3871; 
+  text-align: center; 
+  animation: bright 1.5s ease-in infinite; 
 }
 
-#header h1 { font-size: 30px; }
-
-#header img { animation: bright 1.5s linear infinite; }
-
-.left-side,
-.right-side {
-  padding: 0px 30px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.left-side { width: 900px; align-items: center; }
-
-.right-side {
-  width: 500px !important;
-  position: relative;
-  background-color: #ffffff;
-  border-radius: 10px;
-  align-items: center !important;
-}
-
-.right-side #advice {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  padding: 5px;
-  text-align: center;
-  height: 500px;
-}
-
-.right-side #advice h2 { font-size: 26px; }
-
-.right-side #advice p { font-size: 23px; }
-
-.right-side #advice .image {
-  width: 60%;
-  animation: float 8s linear infinite;
-}
-
-textarea {
+.left-side #user-text{ 
+  width: 60% !important; 
+  height: 300px; 
+  border-radius: 20px; 
   border: none;
-  width: 600px !important;
-  background-color: transparent;
-  color: #0a3871;
+  background-color: transparent; 
   font-weight: bolder;
   font-size: 32px;
-  border-radius: 10px;
+  font-family: "Inter", sans-serif;
+  color: #0a3871;
 }
 
-#user-output { color: #0a3871; width: 100% !important; }
+.right-side #advice{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter", sans-serif;
+}
 
-#user-output, #copy-button { display: none; }
+.right-side #advice img{ width: 70%; animation: float 10s linear infinite; }
+
+.right-side #advice h2{ 
+  font-weight: bolder; 
+  font-size: 26px; 
+  padding-bottom: 10px; 
+  text-align: center;
+}
+
+.right-side #advice p{ 
+  font-weight: bolder; 
+  font-size: 19px; 
+  text-align: center; 
+  color: rgba(0, 0, 0, 0.562); 
+}
+
+.right-side #user-output{ 
+  width: 100% !important; 
+  height: 300px; 
+  display: none;
+  border-radius: 20px; 
+  border: none;
+  background-color: transparent;
+  font-weight: bolder;
+  font-size: 32px;
+  font-family: "Inter", sans-serif;
+  color: #0a3871;
+}
+
+#root{ min-height: 100vh; display: grid; grid-template-rows: auto 1fr auto; }
 
 @keyframes float {
   0% { transform: translateY(0px); }
@@ -178,90 +168,80 @@ textarea {
   100% { filter: brightness(0%); }
 }
 
-@media screen and (max-width: 1100px) {
-  #actions { width: 100%; padding-bottom: 20px; }
+@media screen and (max-width: 1200px) {
+  body::-webkit-scrollbar{ width: 9px; }
+  body::-webkit-scrollbar-thumb{ background-color:#0a3871; border-radius:50px; }
+  body::-webkit-scrollbar-thumb:hover{ background-color:#196ace; }
 
-  #actions #alert { justify-content: start; }
+  .encrypter-container{ flex-direction: column; align-items: center; }
 
-  .encrypter-container {
-    flex-direction: column;
-    height: auto !important;
-  }
+  .encrypter-container .left-side { width: 100%; padding-top: 40px; }
 
-  #encryp-button, #decryp-button { width: 50%; }
+  .encrypter-container .right-side{ width: 70%; overflow: hidden; padding: 40px 7px;}
 
-  #advice img { width: initial !important; }
+  .left-side #actions .btn-container{ width: 100%; flex-direction: column; align-items: center; gap: 20px; padding-bottom: 60px; }
 
-  .left-side { width: 100%; padding-bottom: 50px; }
+  .left-side #actions .btn-container #encryp-button,
+  .left-side #actions .btn-container #decryp-button{ width: 100%; }
 
-  .right-side {
-    padding: 20px 30px;
-    width: 100% !important;
-    height: 80vh !important;
-  }
+  .right-side #advice img{ width: 40%; }
 
-  textarea { width: 100% !important; }
+  .right-side #user-output{ width: 80% !important; }
 }
 
 @media screen and (max-width: 600px) {
-  #advice {
-    height: 100% !important;
-    padding: 9px;
-    padding-top: 26% !important;
-  }
+  .encrypter-container{ padding: 50px 20px; justify-content: space-around; }
 
-  #advice .notification{ font-weight: bolder; padding-bottom: 10px; }
+  .encrypter-container .right-side{ width: 100%; }
 
-  #advice p{ color: rgba(0, 0, 0, 0.541); }
+  #header{ padding: 8px 8px; justify-content: center; }
 
-  #advice img { display: none !important; }
+  #header #logo{ display: none; justify-content: center; }
 
-  #alert h3{ font-size: 15px; }
+  .left-side{ padding: 30px 0px;}
 
-  .btn-container { flex-direction: column; gap: 20px !important; }
+  .left-side #user-text,
+  .right-side #user-output { width: 100% !important; }
 
-  .encrypter-container { padding-bottom: 50px; }
+  .right-side{ box-shadow: 0px 18px 10px 4px rgba(0, 0, 0, 0.514); }
 
-  #encryp-button, #decryp-button { width: 100%; }
-
-  .left-side{ padding: 50px 0px}
-
-  .right-side {
-    width: 100% !important;
-    border-radius: 40px;
-    height: 300px !important; 
-    box-shadow: 0px 18px 10px 4px rgba(0, 0, 0, 0.514);
-  }
+  .right-side #advice img{ display: none; }
 }
 
-@media screen and (max-width: 500px){
-    #header{ justify-content: center; text-align: center; padding: 5px; }
+@media screen and (max-width: 300px){
+  h1, h2, h3, p{ word-break: break-all !important; }
 
-    #header #logo{ display: none; }
+  #actions #alert{ font-size: 12px; padding: 20px 0px; gap: 2px; flex-direction: column; align-items: center; }
 
-    #user-text, #user-output{ font-size: 25px; }
+  #copy-button, #encryp-button,
+  #decryp-button{ font-size: 19px; }
+
+  .encrypter-container{ padding: 50px 8px; height: auto !important; }
+
+  footer{ padding-top: 40px; }
+
+  #header h1,
+  footer h2{ font-size: 20px; }
+
+  .right-side{ height: auto !important; }
+
+  .right-side #advice{ width: 100%; }
+
+  .right-side #advice h2{ font-size: 22px; text-align: center; }
+
+  .right-side #advice p{ font-size: 16px; text-align: center; }
+
+  #user-text, #user-output{ font-size: 29px; }
 }
 
-@media screen and (max-width: 260px){
-    h1, h2, h3, p{ word-break: break-all; }
+@media screen and (max-width: 180px){
+  body, #root{ overflow-x: scroll; }
 
-    #advice{ overflow-y: scroll; padding-top: 55% !important; }
+  #header{ padding: 8px 3px; }
 
-    .encrypter-container{ padding-left: 4px; padding-right: 4px;}
+  .encrypter-container{ padding: 50px 3px; }
 
-    #encryp-button, #decryp-button, #copy-button{ 
-      word-break: break-all; 
-      height: auto; 
-      font-size: 17px; 
-    }
+  .right-side #advice h2{ font-size: 20px; }
 
-    footer h2{ font-size: 15px; }
-
-    #header h1{ font-size: 19px; }
-
-    .right-side{ padding: 20px 3px; overflow: hidden; }
-
-    .right-side #advice .notification{ font-size: 20px; }
-
-    .right-side #advice p{ font-size: 18px; }
+  #user-text, #user-output{ font-size: 20px !important; }
 }
